# omr

./: .gitignore
compiler/: OMRCompilerConfig.cmake
compiler/codegen/: CodeGenPrep.cpp  OMRCodeGenerator.cpp
compiler/ilgen/: OMRIlBuilder.cpp  OMRIlBuilder.hpp  OMRIlType.cpp  OMRThunkBuilder.cpp  OMRVirtualMachineRegisterInStruct.cpp  OMRVirtualMachineRegisterInStruct.hpp  VirtualMachineOperandStack.cpp  VirtualMachineOperandStack.hpp  VirtualMachineRegisterInStruct.hpp
compiler/optimizer/: RegisterCandidate.hpp
compiler/x/amd64/codegen/: OMRTreeEvaluator.cpp
fvtest/compilertest/madlibstests/: arithmetic.cpp  compilertestutil.hpp  return.cpp
fvtest/compilertriltest/: BitPermuteTest.cpp  CMakeLists.txt  JitTest.hpp  NewValueTest.cpp  ShiftAndRotateTest.cpp  TypeConversionTest.cpp  main.cpp
fvtest/jitbuildertest/: JBTestUtil.hpp
jitbuilder/: CMakeLists.txt
jitbuilder/apigen/: LICENSE.md  api-class.schema.json  api-service.schema.json  api-type.schema.json  api.schema.json  cgen.py  cppgen.py  genstatements.py  genutils.py  jitbuilder.api.json  lisgen.py  test.py
jitbuilder/apigen/schema/: api-class.schema.json  api-field.schema.json  api-service.schema.json  api-type.schema.json  api.schema.json
jitbuilder/apigen/test/: cgentests.py  minimal_api.json
jitbuilder/client/cpp/: JitBuilder.cpp
jitbuilder/release/: .gitignore  Makefile
jitbuilder/release/cpp/samples/: Conditionals.cpp  FieldAddress.cpp  LinkedList.cpp  Mandelbrot.cpp  OperandArrayTests.cpp  OperandStackTests.cpp  Switch.cpp  Worklist.cpp
jitbuilder/release/src/: vpassert.cpp
